# INF155_Projet1

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/image/: bitmap.c  image_gris.c  image_gris.h  noyau_filtre.c  noyau_filtre.h
src/tableau/: tableau1d.c  tableau1d.h  tableau2d.c  tableau2d.h
